Added group by endpoints for the transactions
