# backend/Fms/Controllers/TransactionController.cs
@@ -86,4 +86,30 @@ public class TransactionController(
     {
         return Ok(await transactionService.ListWorkspaceTransactions(workspaceId, criteria, pagination));
     }
+    
+    /// <summary>
+    /// Get list of workspace transactions grouped by category
+    /// </summary>
+    [HttpGet("/api/workspaces/{workspaceId:int}/transactions/group-by-category", Name = "listTransactionsGroupByCategory")]
+    [ProducesResponseType(typeof(List<TransactionGroupedByCategoryResponseDto>), StatusCodes.Status200OK)]
+    [ProducesResponseType(typeof(PublicClientErrorDto), StatusCodes.Status400BadRequest)]
+    [ProducesResponseType(typeof(PublicClientErrorDto), StatusCodes.Status404NotFound)]
+    public async Task<IActionResult> ListWorkspaceTransactionsGroupByCategory([FromRoute] int workspaceId,
+        [FromQuery] TransactionCriteriaDto criteria)
+    {
+        return Ok(await transactionService.ListWorkspaceTransactionsGroupByCategory(workspaceId, criteria));
+    }
+    
+    /// <summary>
+    /// Get list of workspace transactions grouped by user
+    /// </summary>
+    [HttpGet("/api/workspaces/{workspaceId:int}/transactions/group-by-user", Name = "listTransactionsGroupByUser")]
+    [ProducesResponseType(typeof(List<TransactionGroupedByUserResponseDto>), StatusCodes.Status200OK)]
+    [ProducesResponseType(typeof(PublicClientErrorDto), StatusCodes.Status400BadRequest)]
+    [ProducesResponseType(typeof(PublicClientErrorDto), StatusCodes.Status404NotFound)]
+    public async Task<IActionResult> ListWorkspaceTransactionsGroupByUser([FromRoute] int workspaceId,
+        [FromQuery] TransactionCriteriaDto criteria)
+    {
+        return Ok(await transactionService.ListWorkspaceTransactionsGroupByUser(workspaceId, criteria));
+    }
 }
