# backend/Fms/Dtos/TransactionCriteriaDto.cs
@@ -17,7 +17,6 @@ public class TransactionCriteriaDto
     /// <example>null</example>
     public int? MaxAmount { get; set; }
     /// <example>null</example>
-    public bool? IncludeAll { get; set; }
     public TransactionCategoryKind? CategoryKind { get; set; }
     
     public TransactionSortFieldDto? SortField { get; set; }
