# backend/Fms/Entities/Grouped/TransactionGroupedByCategory.cs
@@ -1,0 +1,11 @@
+﻿using System.ComponentModel.DataAnnotations;
+
+namespace Fms.Entities.Grouped;
+
+public class TransactionGroupedByCategory
+{
+    [Required]
+    public required TransactionCategoryEntity Category { get; set; }
+    [Required]
+    public required int Amount { get; set; }
+}
